// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`notifications reducer when a closeNotification action is received should remove the notification from the state 1`] = `
Object {
  "autoDismiss": true,
  "message": "",
  "type": "",
}
`;

exports[`notifications reducer when an openNotification action is received should add a notification to the state 1`] = `
Object {
  "autoDismiss": true,
  "message": "Changes have been saved.",
  "type": "Success",
}
`;
